Changed header for Desktop.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,18 +3,18 @@ layout: default
 ---
 <header id="hm-header" class="hm-header">
   <div class="box-wrap">
-    <div class="header-box_dark animated scaleInUp"></div>
-    <div class="header-box_light animated scaleInDown">
-      <div class="green-pattern animated fadeIn delay-6"></div>
-      <a href="javascript:void(0)" class="arrow animated fadeInDown delay-7" id="scroll-arrow"></a>
+    <div class="header-box_light">
+      <div class="green-pattern"></div>
+      <a href="javascript:void(0)" class="arrow" id="scroll-arrow"></a>
+    </div>
+    <div class="wrap">
+      <div class="header-title" id="logo" role="logo"><h1><span class="name">David</span><span class="surname">Gallardo</span></h1></div>
+      <div class="header-description">
+        <p>A guy who's focused on designing products that work beautifully.</p>
+      </div>
     </div>
   </div>
-  <div class="wrap">
-    <div class="header-eyebrow animated fadeInLeft delay-5" id="logo" role="logo"><span>David Gallardo</span></div>
-    <div class="header-title animated fadeInLeft delay-3">
-      <h1 class="h1-big">A guy who's focused on designing products that work beautifully.</h1>
-    </div>
-  </div>
+  
 </header>
 <section id="story" class="story">
   <div class="story_wrap wrap">
@@ -59,7 +59,7 @@ layout: default
                   <a href="http://www.seat.com"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR</span> <span>CONFIG</span></h3></a>
                 </div>
               <div class="item_image-block item_image-block_{{ post.number }}">
-                <div class="item_title title_desktop faded">
+                <div class="item_title title_desktop">
                   <a href="http://www.seat.com" target="_blank" rel="noopener noreferrer"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR </span> <span>CONFIG.</span></h3></a>
                 </div>
               </div>
@@ -78,7 +78,7 @@ layout: default
                   <a href="https://www.wefoundarobot.com" target="_blank" rel="noopener noreferrer"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
                 </div>
               <div class="item_image-block item_image-block_{{ post.number }}">
-                <div class="item_title title_desktop faded">
+                <div class="item_title title_desktop">
                   <a href="https://www.wefoundarobot.com"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
                 </div>
               </div>
@@ -95,12 +95,12 @@ layout: default
       </ul>
     </div>
   </section>
-  <section id="showcase" class="showcase">
+  <section id="grid" class="showcase">
     <div class="wrap">
       <div class="green-pattern faded"></div>
       <div class="showcase_title ">
         <h2 class="faded">More work, maybe old maybe gone.</h2>
-        <p class="faded">Apart from SEAT, the last 7 years I've been busy designing for many other clients, some as a part of a team, some others solo. Here are some extra examples both, web and mobile. </p>
+        <p class="faded">Apart from SEAT, the last 7 years I've been busy designing for many other clients, some as a part of a team, some others as a solo player. Here are some extra examples both, web and mobile. </p>
       </div>
     </div>
     <div class="wrap">
