New Header done for all viewports. Social media block just started.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,24 @@
-		<footer class="contact" id="contact">
-			<div class="wrap">
-      <a href="mailto:hello@dgallardo.com" class="contact-cta"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
-    </div>
-		</footer>		
-		</main>
-
-		<!--[if !IE]> -->
-    	<link rel="stylesheet" href='{{ "/css/main.css" | relative_url }}'>
-    <!-- <![endif]-->
-
-		{% include scripts.html %}
-
-	</body>
+<footer class="contact" id="contact">
+	<div class="email">
+		<div class="wrap">
+			<a href="mailto:hello@dgallardo.com" class="contact-cta"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
+		</div>
+	</div>
+	<div class="social-media">
+		<div class="wrap">
+			<ul>
+				<li class="sm-item"><a href="https://instagram.com/david_gallardo">instagram</a></li>
+				<li class="sm-item"><a href="#">linkedin</a></li>
+				<li class="sm-item"><a href="https://dribbble.com/davidgallardo">dribbble</a></li>
+				<li class="sm-item"><a href="https://twitter.com/davrocks">twitter</a></li>
+			</ul>
+		</div>
+	</div>
+</footer>
+</main>
+<!--[if !IE]> -->
+<link rel="stylesheet" href='{{ "/css/main.css" | relative_url }}'>
+<!-- <![endif]-->
+{% include scripts.html %}
+</body>
 </html>
-		
-		
-		
