--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,13 +3,14 @@ layout: default
 ---
 <header id="hm-header" class="hm-header">
   <div class="box-wrap">
-    <div class="header-box_light">
+    <div class="green-curtain animated scaleOutLeft"></div>
+    <div class="header-box_light animated fadeInLeft delay-4">
       <div class="green-pattern"></div>
-      <a href="javascript:void(0)" class="arrow" id="scroll-arrow"></a>
+      <a href="javascript:void(0)" class="arrow animated fadeInDown delay-6" id="scroll-arrow"></a>
     </div>
     <div class="wrap">
-      <div class="header-title" id="logo" role="logo"><h1><span class="name">David</span><span class="surname">Gallardo</span></h1></div>
-      <div class="header-description">
+      <div class="header-title" id="logo" role="logo"><h1><span class="name animated fadeInLeft">David</span><span class="surname animated fadeInLeft delay-2">Gallardo</span> <span class="white-arrow animated fadeInLeft delay-5"></span></h1></div>
+      <div class="header-description animated fadeInUp">
         <p>A guy who's focused on designing products that work beautifully.</p>
       </div>
     </div>
@@ -18,7 +19,6 @@ layout: default
 </header>
 <section id="story" class="story">
   <div class="story_wrap wrap">
-    <div class="green-pattern green-pattern_first faded"></div>
       <div class="story_title">
         <h2 class="faded">My long story, short.</h2>
       </div>
