--- a/_scss/helpers/_mixins.scss
+++ b/_scss/helpers/_mixins.scss
@@ -132,7 +132,7 @@ $radius: 2px;
 }
 .fadeInDown { animation-name: fadeInDown; }
 @keyframes fadeInLeft {
-  from { opacity: 0; transform: translate3d(-100%, 0, 0); }
+  from { opacity: 0; transform: translate3d(-10%, 0, 0); }
   to { opacity: 1; transform: none; }
 }
 .fadeInLeft { animation-name: fadeInLeft; }
@@ -167,6 +167,20 @@ transform-origin: 0% 100% ; }
 }
 .scaleInDown { animation-name: scaleInDown;
 transform-origin: 0% 0% ; }
+
+@keyframes scaleOutDown {
+  from {  transform:scaleY(1); }
+  to {  transform:scaleY(0); }
+}
+.scaleOutDown { animation-name: scaleOutDown;
+transform-origin: 0% 0% ; }
+
+@keyframes scaleOutLeft {
+  from {  transform:scaleX(1); }
+  to {  transform:scaleX(0); }
+}
+.scaleOutLeft { animation-name: scaleOutLeft;
+transform-origin: 100% 0% ; }
 
 
 .delay-2 {
