--- a/_scss/layouts/header-home.scss
+++ b/_scss/layouts/header-home.scss
@@ -17,10 +17,10 @@
   height: auto;
   display: block;
   position: relative;
-  background: #242526;
+  background: #fff;
   margin: 0 auto;
   z-index: 1;
-  padding: 7rem 0 12rem 0;
+  padding: 5rem 0 7rem 0;
   overflow: hidden;
 
   @include media($m) {
@@ -39,10 +39,10 @@
     left: -28%;
     z-index: -1;
     width: 150%;
-    height: 90%;
+    height: 95%;
     display: block;
     background: #292A2B;
-    box-shadow: 0 2rem 0rem 0 $main;
+    box-shadow: 0 1rem 0rem 0 $main;
 
     @include media($m) {
       display: none;
@@ -56,26 +56,57 @@
   margin: 0 auto;
   display: block;
   position: relative;
-  background: #242526;
+  background: #292A2B;
   @include border-box;
 
   @include media($m) {
-    box-shadow: inset 0 0 0 2.5rem white; 
+    box-shadow: inset 0 0 0 1.5rem white; 
+    height: 760px;
+  }
+  @include media($l) {
     height: 780px;
+    box-shadow: inset 0 0 0 2.5rem white; 
+  }
+}
+.green-curtain{
+  display: none;
+  @include media($m) {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 1.5rem;
+    left: -1.5rem;
+    background:$main;
+    box-shadow: none;
+    z-index: 9;
+  }
+  @include media($l) {
+    top: 2.5rem;
+    left: -2.5rem;
   }
 }
 
 .header-box_light{
-  display: none;
+  height: 210px;
+  width: 60%;
+  position: absolute;
+  display: block;
+  background: rgba(0,0,0,0) url('../images/ui/diagonal-ptr.svg') left top repeat;
+  @include border-box;
+  bottom: -8rem;
+  right: 0;
 
   @include media($m) {
     height: 650px;
     width: 45%;
-    position: absolute;
-    display: block;
-    background: #292A2B;
     @include border-box;
+    bottom: auto;
     top: 6rem;
+    right: 3rem;
+    background: rgba(0,0,0,.05) url('../images/ui/diagonal-ptr.svg') left top repeat;
+  }
+  @include media($l) {
     right: 4rem;
   }
 
@@ -90,6 +121,7 @@
     bottom: -2rem;
     left: -5rem;
     display: none;
+
     @include media($m) {
       width: 140px;
       height: 140px;
@@ -113,7 +145,7 @@
       bottom: 6rem;
       right: 45%;
       transition: all .3s;
-      z-index: 3;
+      z-index: 6;
     }
 
     &:after, &:before{
@@ -131,42 +163,69 @@
   @include column(11.5,12);
   margin-left: 0rem;
   position: relative;
+  letter-spacing: 8px;
+  text-transform: uppercase;
   z-index: 1;
 
   @include media($m) {
     @include column(8,12);
     margin-top: 13rem;
     margin-left: 2.5/12*100%;
-    text-transform: uppercase;
-    letter-spacing: 30px;
+    letter-spacing: 15px;
   }
   @include media($l) {
-
+    letter-spacing: 30px;
   }
 
   &:after{
     content: '';
-    width: 200px;
-    height: 200px;
+    width: 160px;
+    height: 160px;
     position: absolute;
     display: block;
     background:transparent;
     border: 1px solid $main;
-    top: -70px;
-    left: -110px;
+    top: -45px;
+    left: -103px;
     z-index: -1;
+    opacity: .6;
+    
+    @include media($m) {
+      width: 200px;
+      height: 200px;
+      top: -70px;
+      left: -110px;
+      opacity: 1;
+    }
+
+    @include media($l) {
+      top: -70px;
+      left: -110px;
+    }
   }
    &:before{
     content: '';
-    width: 200px;
-    height: 200px;
+    width: 160px;
+    height: 160px;
     position: absolute;
     display: block;
     background:transparent;
     border: 1px solid #484A4D;
-    top: -40px;
+    top: -25px;
     left: -80px;
     z-index: -1;
+
+    @include media($m) {
+      width: 200px;
+      height: 200px;
+      top: -40px;
+      left: -80px;
+    }
+
+    @include media($l) {
+      top: -40px;
+      left: -80px;
+    }
   }
 
   span{
@@ -178,37 +237,48 @@
 
   }
   .surname{ 
-    margin-left: 4rem;
+    margin-left: 0rem;
 
-    &:before{
+    @include media($m) {
+      margin-left: 4rem;
+    }
+  }
+  .white-arrow{
       content: '';
       width: 90px;
       height: 10px;
-      display: block;
       position: absolute;
       background:transparent url('../images/ui/white-arw.svg') left center no-repeat;
-      left: -120px;
-      top: 18px;
+      left: -40px;
+      top: 85px;
+      display: none;
+
+      @include media($m) {
+        display: block;
+      }
     }
-  }
 }
 
 .header-description{
+  letter-spacing: 5px;
+  margin-top: 8.5rem;
 
   @include media($m) {
-    @include column(4.5,12);
+    @include column(4.25,12);
     margin-top: 5.5rem;
     margin-left: 2.25/12*100%;
-    letter-spacing: 5px;
   }
   @include media($l) {
     @include column(3.25,12);
   }
 
   p{
-    color: $grey-4;
+    color: $grey-3;
     @include catamaran(300, 1rem);
     line-height: 1.25;
+    @include media($m) {
+      color: $grey-4;
+    }
   }
 
 }
