Changed the header again to a light version, should be the last.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="contact" id="contact">
+<footer class="contact faded" id="contact">
 	<div class="email">
 		<div class="wrap">
 			<a href="mailto:hello@dgallardo.com" class="contact-cta"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
