--- a/_scss/helpers/_typography.scss
+++ b/_scss/helpers/_typography.scss
@@ -4,14 +4,15 @@ h1, h2, h3, h4, h5, p, ul, li, a {
   @include no-space;
 }
 h1 {
-  @include catamaran(900, 1.7rem);
-  color: white;
-  line-height: 1.08;
+  @include catamaran(900, 2.3rem);
+  color: $grey-7;
+  line-height: .7;
   @include media($m) {
-    @include catamaran(800, 2.25rem);
+    @include catamaran(900, 3.6rem);
   }
   @include media($l) {
-    @include catamaran(800, 2.5rem);
+    @include catamaran(900, 4.5rem);
+    line-height: .8;
   }
 }
 h2 {
