--- a/_scss/layouts/header-home.scss
+++ b/_scss/layouts/header-home.scss
@@ -13,7 +13,6 @@
 /////////////////////////////////////////
 .hm-header {
   width: 100%;
-  max-width: $max-width;
   height: auto;
   display: block;
   position: relative;
@@ -27,205 +26,77 @@
     overflow: visible;
     background: white;
     padding: 0;
-    min-height: 680px;
   }
-
-  &:before {
-    content: '';
-    position: absolute;
-    transform: rotate(-8deg);
-    transform-origin: 8% 0;
-    top: 0;
-    left: -28%;
-    z-index: -1;
-    width: 150%;
-    height: 95%;
-    display: block;
-    background: #292A2B;
-    box-shadow: 0 1rem 0rem 0 $main;
-
-    @include media($m) {
-      display: none;
-    }
-  } 
 }
 .box-wrap{
   width: 100%; 
   min-height: 5rem;
-  max-width: 1440px;
   margin: 0 auto;
   display: block;
   position: relative;
-  background: #292A2B;
   @include border-box;
+  overflow: hidden;
 
   @include media($m) {
-    box-shadow: inset 0 0 0 1.5rem white; 
-    height: 760px;
+    height: 600px;
   }
   @include media($l) {
-    height: 780px;
-    box-shadow: inset 0 0 0 2.5rem white; 
-  }
-}
-.green-curtain{
-  display: none;
-  @include media($m) {
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
-    top: 1.5rem;
-    left: -1.5rem;
-    background:$main;
-    box-shadow: none;
-    z-index: 9;
-  }
-  @include media($l) {
-    top: 2.5rem;
-    left: -2.5rem;
-  }
-}
-
-.header-box_light{
-  height: 210px;
-  width: 60%;
-  position: absolute;
-  display: block;
-  background: rgba(0,0,0,0) url('../images/ui/diagonal-ptr.svg') left top repeat;
-  @include border-box;
-  bottom: -8rem;
-  right: 0;
-
-  @include media($m) {
-    height: 650px;
-    width: 45%;
-    @include border-box;
-    bottom: auto;
-    top: 6rem;
-    right: 3rem;
-    background: rgba(0,0,0,.05) url('../images/ui/diagonal-ptr.svg') left top repeat;
-  }
-  @include media($l) {
-    right: 4rem;
-  }
-
-  
-  > .green-pattern{
-    width: 140px;
-    height: 140px;
-    display: block;
-    position: absolute;
-    background:transparent url('../images/ui/green-ptr.svg') left top no-repeat;
-    background-size: 100%;
-    bottom: -2rem;
-    left: -5rem;
-    display: none;
-
-    @include media($m) {
-      width: 140px;
-      height: 140px;
-      display: block;
-      bottom: auto;
-      left: auto;
-      top: -2rem;
-      right: 3rem;
-    }
-  }
-
-  > .arrow{
-    display: none;
-
-    @include media($m) {
-      width: 1rem;
-      height: 90px;
-      display: block;
-      position: absolute;
-      background:transparent url('../images/ui/green-arw.svg') left top no-repeat;
-      bottom: 6rem;
-      right: 45%;
-      transition: all .3s;
-      z-index: 6;
-    }
-
-    &:after, &:before{
-      display: none;
-    }
-
-    &:hover{
-      bottom: 5.8rem;
-      transition: all .3s;
-    }
+    height: 750px;
   }
 }
 
 .header-title{
-  @include column(11.5,12);
-  margin-left: 0rem;
   position: relative;
-  letter-spacing: 8px;
-  text-transform: uppercase;
-  z-index: 1;
 
   @include media($m) {
-    @include column(8,12);
-    margin-top: 13rem;
-    margin-left: 2.5/12*100%;
-    letter-spacing: 15px;
+    width: 600px;
+    height: 340px;
+    position: absolute;
+    display: block;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -60%);
   }
   @include media($l) {
-    letter-spacing: 30px;
+    width: 600px;
+    height: 340px;
+  }
+  
+  .grey-box{
+    content: '';
+    width: 1180px;
+    height: 750px;
+    display: block;
+    position: absolute;
+    background:$placeholders;
+    border-radius: 50px;
+    transform: rotate(-15deg);
+    left: -180px;
+    top: -360px;
+
+    &.border{
+      background: transparent;
+      border: 2px solid $grey-3;
+    }
   }
 
-  &:after{
-    content: '';
-    width: 160px;
-    height: 160px;
-    position: absolute;
+  > h1{
     display: block;
-    background:transparent;
-    border: 1px solid $main;
-    top: -45px;
-    left: -103px;
-    z-index: -1;
-    opacity: .6;
-    
-    @include media($m) {
-      width: 200px;
-      height: 200px;
-      top: -70px;
-      left: -110px;
-      opacity: 1;
-    }
-
-    @include media($l) {
-      top: -70px;
-      left: -110px;
-    }
+    margin-left: 85px;
+    margin-bottom: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: 4px;
   }
-   &:before{
-    content: '';
-    width: 160px;
-    height: 160px;
-    position: absolute;
-    display: block;
-    background:transparent;
-    border: 1px solid #484A4D;
-    top: -25px;
-    left: -80px;
-    z-index: -1;
 
-    @include media($m) {
-      width: 200px;
-      height: 200px;
-      top: -40px;
-      left: -80px;
-    }
-
-    @include media($l) {
-      top: -40px;
-      left: -80px;
-    }
+  > .green-pattern{
+    width: 150px;
+    height: 145px;
+    position: relative;
+    background:transparent url('../images/ui/green-ptr.svg') left top no-repeat;
+    float: left;
+    top: 0;
+    left: 0;
+    z-index: 1;
   }
 
   span{
@@ -233,51 +104,33 @@
     position: relative;
     margin-bottom: .6rem;
   }
-  .name{
-
-  }
-  .surname{ 
-    margin-left: 0rem;
-
-    @include media($m) {
-      margin-left: 4rem;
-    }
-  }
-  .white-arrow{
-      content: '';
-      width: 90px;
-      height: 10px;
-      position: absolute;
-      background:transparent url('../images/ui/white-arw.svg') left center no-repeat;
-      left: -40px;
-      top: 85px;
-      display: none;
-
-      @include media($m) {
-        display: block;
-      }
-    }
 }
 
 .header-description{
-  letter-spacing: 5px;
-  margin-top: 8.5rem;
 
   @include media($m) {
-    @include column(4.25,12);
-    margin-top: 5.5rem;
-    margin-left: 2.25/12*100%;
+
   }
   @include media($l) {
-    @include column(3.25,12);
+    width: 380px;
+    position: relative;
+    margin-left: 1.8rem;
+    padding-top: .5rem;
+    float: left;
   }
 
   p{
-    color: $grey-3;
+    color: $grey-6;
     @include catamaran(300, 1rem);
-    line-height: 1.25;
+    line-height: 25px;
+
     @include media($m) {
-      color: $grey-4;
+      @include catamaran(300, 1.2rem);
+      line-height: 36px;
+    }
+    @include media($l) {
+      @include catamaran(300, 1.5rem);
+      line-height: 40px;
     }
   }
 
