--- a/_scss/layouts/home-story.scss
+++ b/_scss/layouts/home-story.scss
@@ -83,7 +83,7 @@
     margin-top: 0;
     padding-top: 0;
     padding-left: 1rem;
-    border-left: 1px solid $main;
+    border-left: 1px solid $dividers;
     border-top: 0;
   }
 }
