--- a/_scss/layouts/home.scss
+++ b/_scss/layouts/home.scss
@@ -8,11 +8,12 @@
   @include column(12, 12);
   margin-left: 0;
   margin-top: 2rem;
+  z-index: 1;
   
   @include media($m) {
     margin-left: 2/12*100%;
     @include column(8, 12);
-    margin-top: 4rem;
+    margin-top: 6rem;
   }
   @include media($l) {
     @include column(6, 12);
@@ -21,29 +22,34 @@
   > h2 {
     margin-bottom: 1.2rem;
     text-transform: uppercase;
+
   }
   > p {
     margin-bottom: 0;
   }
 }
 .green-pattern{
-  width: 142px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   display: block;
   position: absolute;
-  background:transparent url('../images/ui/pattern-green.svg') left top no-repeat;
+  background:transparent url('../images/ui/green-ptr.svg') left top no-repeat;
   background-size: 100%;
-  top: 0rem;
-  right: 1rem;
+  top: -.5rem;
+  left: -2.25rem;
+  z-index: -1;
+
   @include media($m) {
-    width: 204px;
-    height: 144px;
-    top: 8rem;
-    right: 3rem;
+    width: 120px;
+    height: 120px;
+    top: -.75rem;
+    left: -2.25rem;
   }
   @include media($l) {
-    top: 8rem;
-    right: 6rem;
+    width: 145px;
+    height: 145px;
+    top: -1.25rem;
+    left: -5rem;
   }
 }
 
@@ -71,7 +77,7 @@
   @include clearfix;
 
   @include media($m) {
-    margin: 7.5rem auto 9.5rem auto;
+    margin: 7.5rem auto 14rem auto;
   }
 
     .grid-row{
