--- a/_scss/helpers/_typography.scss
+++ b/_scss/helpers/_typography.scss
@@ -6,9 +6,10 @@ h1, h2, h3, h4, h5, p, ul, li, a {
 h1 {
   @include catamaran(900, 2.3rem);
   color: $grey-7;
-  line-height: .7;
+  line-height: 1;
   @include media($m) {
     @include catamaran(900, 3.6rem);
+    line-height: .7;
   }
   @include media($l) {
     @include catamaran(900, 4.5rem);
