Light version of the footer done.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,7 @@ layout: default
 <header id="hm-header" class="hm-header">
   <div class="box-wrap">
     <div class="header-title" id="logo" role="logo">
-      <div class="grey-box animated rotateIt "></div>
-      <div class="grey-box border animated rotateItBig delay-2"></div>
+      <div class="grey-box  rotateIt "></div>
       <h1><span class="name animated fadeInLeft">David</span><span class="surname animated fadeInLeft delay-2">Gallardo</span></h1>
       <div class="green-pattern"></div>
       <div class="header-description animated fadeInUp">
@@ -44,7 +43,7 @@ layout: default
       <div class="wrap">
         
         <div class="showcase_title ">
-          <div class="green-pattern"></div>
+          <div class="green-ptrn"></div>
           <h2 class="faded">Showcase of recent projects.</h2>
           <p class="faded">A communi observantia non est recedendum. Quam temere in vitiis, legem sancimus haerentia. Inmensae subtilitatis, obscuris et malesuada fames. Unam incolunt Belgae, aliam Aquitani, tertiam. Quo usque tandem abutere, Catilina, patientia nostra? Tu quoque, Brute, fili mi, nihil timor populi, nihil!. </p>
         </div>
@@ -81,7 +80,7 @@ layout: default
                 </div>
                 <div class="item_image-block item_image-block_{{ post.number }}">
                   <div class="item_title title_desktop faded delay-1">
-                    <a href="https://wefoundarobot.com"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
+                    <a href="https://wefoundarobot.com" target="_blank" rel="noopener noreferrer"><h3><span>WE </span> <span>FOUND </span> <span>A </span> <span>ROBOT </span> <span>- </span><span>TRAVEL </span> <span>BLOG</span></h3></a>
                   </div>
                 </div>
                 <div class="item_copy-block">
@@ -102,9 +101,9 @@ layout: default
     <section id="grid" class="showcase">
       <div class="wrap">
         <div class="showcase_title ">
-          <div class="green-pattern"></div>
+          <div class="green-ptrn"></div>
           <h2 class="faded">More work, maybe old maybe gone.</h2>
-          <p class="faded">Apart from SEAT, the last 7 years I've been busy designing for many other clients, some as a part of a team, some others as a solo player. Here are some extra examples both, web and mobile. </p>
+          <p class="faded">Apart from the previous, the last 7 years I've been busy designing for many other clients, some as a part of a team, some others as a solo player. Here are some extra examples both, web and mobile. </p>
         </div>
       </div>
       <div class="wrap">
