--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,19 @@
 <footer class="contact faded" id="contact">
 	<div class="email">
 		<div class="wrap">
-			<a href="mailto:hello@dgallardo.com" class="contact-cta"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
+			<div class="contact-cta">
+				<div class="contact-grey-box"></div>
+				<a href="mailto:hello@dgallardo.com"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
+			</div>
 		</div>
 	</div>
 	<div class="social-media">
 		<div class="wrap">
 			<ul>
-				<li class="sm-item"><a href="https://instagram.com/david_gallardo">instagram</a></li>
-				<li class="sm-item"><a href="#">linkedin</a></li>
-				<li class="sm-item"><a href="https://dribbble.com/davidgallardo">dribbble</a></li>
-				<li class="sm-item"><a href="https://twitter.com/davrocks">twitter</a></li>
+				<li class="sm-item"><a href="https://instagram.com/david_gallardo" target="_blank" rel="noopener noreferrer">instagram</a></li>
+				<li class="sm-item"><a href="#" target="_blank" rel="noopener noreferrer">linkedin</a></li>
+				<li class="sm-item"><a href="https://dribbble.com/davidgallardo" target="_blank" rel="noopener noreferrer">dribbble</a></li>
+				<li class="sm-item"><a href="https://twitter.com/davrocks" target="_blank" rel="noopener noreferrer">twitter</a></li>
 			</ul>
 		</div>
 	</div>
