Lorem ipsum and linkedin anchor fixed

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@ layout: default
         <div class="showcase_title ">
           <div class="green-ptrn"></div>
           <h2 class="faded">Showcase of recent projects.</h2>
-          <p class="faded">A communi observantia non est recedendum. Quam temere in vitiis, legem sancimus haerentia. Inmensae subtilitatis, obscuris et malesuada fames. Unam incolunt Belgae, aliam Aquitani, tertiam. Quo usque tandem abutere, Catilina, patientia nostra? Tu quoque, Brute, fili mi, nihil timor populi, nihil!. </p>
+          <p class="faded">So here is what I've been doing recently. For now you can just read a small description of what the job was and a link to it, but I'm writting the cases by the time you are reading this. More info coming soon :). </p>
         </div>
       </div>
       <div class="wrap">
