--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 		<div class="wrap">
 			<ul>
 				<li class="sm-item"><a href="https://instagram.com/david_gallardo" target="_blank" rel="noopener noreferrer">instagram</a></li>
-				<li class="sm-item"><a href="#" target="_blank" rel="noopener noreferrer">linkedin</a></li>
+				<li class="sm-item"><a href="https://linkedin.com/in/gallardodavid" target="_blank" rel="noopener noreferrer">linkedin</a></li>
 				<li class="sm-item"><a href="https://dribbble.com/davidgallardo" target="_blank" rel="noopener noreferrer">dribbble</a></li>
 				<li class="sm-item"><a href="https://twitter.com/davrocks" target="_blank" rel="noopener noreferrer">twitter</a></li>
 			</ul>
