Started writting the cases, the first one, almost ready to ship. Case layout and images added, tweaked some stuff in the homepage to connect with the new part.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<header>
-	{% include navigation.html %}
+<div class="case-seat-website">
+	<header class="">
 		<h1>{{ page.title }}</h1>
-</header>
-<section>
-	<article>
-		
-		{{ content }}
-		
-	</article>
-</section>
+	</header>
+	<section>
+		<article>
+			
+			
+		</article>
+	</section>
+</div>
