--- a/_scss/helpers/_mixins.scss
+++ b/_scss/helpers/_mixins.scss
@@ -25,7 +25,7 @@ $grey-7: #2C3739;
 $dividers: $grey-2;
 $placeholders: $grey-1;
 
-$red: #FF4C4F;
+$red: #F8223E;
 $orange: #FCAF56;
 $yellow: #FFE04A;
 $green: #39EF9F;
@@ -42,7 +42,7 @@ $title: $grey-7;
 // Variables
 $base-typography: 20px;
 $max-width: 1440px;
-$max-width: 1280px;
+// $max-width: 1280px;
 
 $radius: 2px;
 
