--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,14 +28,7 @@ layout: default
           <p>
             In the side, I taught design in schools like <a href="https://www.ironhack.com/" target="_blank" rel="noopener noreferrer">Ironhack</a> or TheAppSchool and directly to design teams inside companies like Schneider Electrics or TV3.</p>
           </div>
-          <div class="story_column_small faded delay-4">
-            <ul class="story-list">
-              <li class="list_item"><span>2010</span>Mobivery</li>
-              <li class="list_item"><span>2014</span>LOLA [Mullenlowe]</li>
-              <li class="list_item"><span>2017</span>The Earth  <span class="planet">🌏</span></li>
-              <li class="list_item"><span>2018</span><a href="mailto:hello@dgallardo.com" id="company">Your company?</a></li>
-            </ul>
-          </div>
+         
         </div>
       </div>
     </section>
@@ -54,11 +47,11 @@ layout: default
             {% if post.number == "01" %}
               <li id="seat-case" class="showcase_item">
                 <div class="item_title title_mobile">
-                  <a href="http://www.seat.com"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR</span> <span>CONFIG</span></h3></a>
+                  <a href="{{ post.url }}"><h3><span>SEAT </span> <span>GLOBAL </span> <span>RESPONSIVE </span> <span>WEBSITE</span></h3></a>
                 </div>
                 <div class="item_image-block item_image-block_{{ post.number }}">
                   <div class="item_title title_desktop faded delay-1">
-                    <a href="http://www.seat.com" target="_blank" rel="noopener noreferrer"><h3><span>SEAT </span> <span>GLOBAL </span> <span>WEBSITE </span> <span>&amp; </span> <span>CAR </span> <span>CONFIG.</span></h3></a>
+                    <a href="{{ post.url }}"><h3><span>SEAT </span> <span>GLOBAL </span> <span>RESPONSIVE </span> <span>WEBSITE</span></h3></a>
                   </div>
                 </div>
                 <div class="item_copy-block">
@@ -66,7 +59,7 @@ layout: default
                     <div class="item_subtitle faded">{{post.type}}</div>
                     <div class="faded delay-2">
                       <p class="item_copy">{{post.excerpt}}</p>
-                      <a href="http://www.seat.com" class="case-link" target="_blank" rel="noopener noreferrer">Visit Website</a>
+                      <a href="{{ post.url }}" class="case-link">Read Case</a>
                     </div>
                     
                   </div>
@@ -155,5 +148,4 @@ layout: default
         </div>
       </div>
     </section>
-    {% include footer.html %}
-    <!-- <section class="dark">  </section> -->
+    
