--- a/_scss/layouts/home.scss
+++ b/_scss/layouts/home.scss
@@ -21,6 +21,7 @@
     text-transform: uppercase;
   }
   > p {
+    width: 80%;
     margin-bottom: 0;
   }
 }
@@ -95,6 +96,17 @@
         width: 10.5rem;
         margin-top: 0;
       }
+      @include media($m) {
+        position: absolute;
+        display: block;
+        width: 10.5rem;
+      }
+      @include media($l) {
+        @include catamaran(400, .9rem);
+        color: $text;
+        line-height: 1.5;
+      }
+
       &:after {
         content: '';
         width: 1rem;
