--- a/_scss/layouts/seat-web.scss
+++ b/_scss/layouts/seat-web.scss
@@ -3,16 +3,16 @@
   p {
   }
   .close-btn {
-    width: 35px;
-    height: 35px;
+    width: 30px;
+    height: 30px;
     display: block;
     background: white url("../images/ui/close-icon.svg") center center no-repeat;
     background-size: 40%;
     box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.10);
     border-radius: 50%;
     position: fixed;
-    top: 1rem;
-    right: 1rem;
+    top: .75rem;
+    right: .75rem;
     z-index: 99;
 		
 		@include media($m) {
@@ -29,7 +29,7 @@
 }
 .case-header {
   width: 100%;
-  height: 680px;
+  height: 640px;
   position: relative;
 
   @include media($m) {
@@ -48,10 +48,11 @@
     width: 100%;
     height: auto;
     margin: 0 auto;
-    padding-top: 5rem;
+    padding-top: 3.5rem;
 
     @include media($m) {
       width: 700px;
+      padding-top: 5rem;
     }
     @include media($l) {
       width: 780px;
@@ -168,7 +169,10 @@ article {
   .case-image {
     width: 100%;
     max-width: $max-width;
-    margin: 6rem auto;
+    margin: 2rem auto;
+    @include media($m) {
+      margin: 6rem auto;
+    }
 
     img {
       width: 100%;
