added small animation to data inside cases

--- a/_layouts/seat-website.html
+++ b/_layouts/seat-website.html
@@ -2,21 +2,21 @@
 layout: default
 ---
 <div class="case seat-website">
-	<a href="{{ site.url }}" class="close-btn"></a>
+	<a href="{{ site.url }}" class="close-btn animated fadeInDown"></a>
 	<header class="case-header {{ page.gradient }}-gradient">
 		<div class="case-bg-image" style="background: url(../../images/cases/{{ page.number }}/bg-image@2x.jpg) center top;"></div>
 		<div class="copy-block">
-			<h1 class="case-title">{{ page.title }}</h1>
+			<h1 class="case-title animated fadeInUp">{{ page.title }}</h1>
 			<ul class="case-data">
-				<li class="case-data-item">
+				<li class="case-data-item animated fadeInUp">
 					<div class="label">Company</div>
 					<div class="info">{{ page.company }}</div>
 				</li>
-				<li class="case-data-item">
+				<li class="case-data-item animated fadeInUp delay-2">
 					<div class="label">Role</div>
 					<div class="info">{{ page.role }}</div>
 				</li>
-				<li class="case-data-item">
+				<li class="case-data-item animated fadeInUp delay-3">
 					<div class="label">Year</div>
 					<div class="info">{{ page.year }}</div>
 				</li>
