New simplified version of homepage and cases. More stuff added.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,14 @@
-<footer class="contact faded" id="contact">
+<footer class="contact" id="contact">
 	<div class="email">
 		<div class="wrap">
-			<div class="contact-cta">
-				<div class="contact-grey-box"></div>
-				<a href="mailto:hello@dgallardo.com"><span>hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com</span></a>
+			<div class="contact-address reveal">
+				hel<span>null</span>lo<span>nulo</span>@dga<span>null</span>llardo<span>nulo</span>.com
 			</div>
 		</div>
 	</div>
 	<div class="social-media">
 		<div class="wrap">
-			<ul>
+			<ul class="sm-list">
 				<li class="sm-item"><a href="https://instagram.com/david_gallardo" target="_blank" rel="noopener noreferrer">instagram</a></li>
 				<li class="sm-item"><a href="https://linkedin.com/in/gallardodavid" target="_blank" rel="noopener noreferrer">linkedin</a></li>
 				<li class="sm-item"><a href="https://dribbble.com/davidgallardo" target="_blank" rel="noopener noreferrer">dribbble</a></li>
@@ -18,6 +17,7 @@
 		</div>
 	</div>
 </footer>
+
 </main>
 <!--[if !IE]> -->
 <link rel="stylesheet" href='{{ "/css/main.css" | relative_url }}'>
