--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,7 +8,7 @@
 WebFont.load({
 google: {
 	families: [
-	'Catamaran:100,200,300,400,500,600,700,800,900'
+	'Work Sans:300,400,500,600,800'
 	]}
 });
 </script>
