--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,16 +1,7 @@
-
-	<nav>
-		<div>
-				{% assign navigation_pages = site.html_pages | sort: 'navigation_order' %}
-				{% for p in navigation_pages %}
-					{% if p.navigation_order %}
-						<li>
-							<a href="{{ p.url | relative_url }}" {% if p.url == page.url %}class="active"{% endif %}>
-							{{ p.link }}
-							</a>
-						</li>
-					{% endif %}
-				{% endfor %}
-			</ul>
+<div class="wrap">
+	<nav class="navigation" role="navigation">
+		<div class="logo reveal-text" role="logo">
+			<a href="{{ site.url }}" >DG.</a>
 		</div>
 	</nav>
+</div>
