--- a/_layouts/seat-website.html
+++ b/_layouts/seat-website.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 ---
-<div class="case seat-website">
+<div class="case">
 	<a href="{{ site.url }}" class="close-btn"></a>
-	<header class="case-header {{ page.gradient }}-gradient">
-		<div class="case-bg-image" style="background: url(../../images/cases/{{ page.number }}/bg-image@2x.jpg) center top;"></div>
+	<header class="case-header">
 		<div class="copy-block">
 			<h1 class="case-title">{{ page.title }}</h1>
 			<ul class="case-data">
@@ -23,16 +22,20 @@ layout: default
 			</ul>
 		</div>
 	</header>
-	<div class="case-header-image"><img src='{{ "/images/cases/01/header.png" | replace: "01", page.number | relative_url }}' alt="SEAT Homepage"></div>
+	<div class="case-header-image">
+		<figure>
+			<img src='{{ "/images/cases/01/header.png" | replace: "01", page.number | relative_url }}' alt="SEAT Homepage">
+		</figure>
+	</div>
 	<section>
-		<article>
+		<article class="article">
 			<p>
 				SEAT is one of the major European brands in the automotive industry, as part of the Volkswagen group. In 2013 the company took a new strategic approach to change the people’s perception of the brand.  Lola [partnering with Huge at the begining] got the chance to develop this bold communication challenge.
 			</p>
 			<p>
 				My role in the venture was to help redesign their entire digital ecosystem containing the Global Marketing Website, the Car Configurator, the Media Center, the Accessories eCommerce, the Online Manuals and many more. I ended leading the design team.
 		  </p>
-			<div class="case-image faded">
+			<div class="case-image">
 				<img src='{{ "images/cases/01/seat-ws-01.png" | relative_url }}' alt="gallery of SEAT modules">
 			</div>
 			<h2>It’s not just a website but a modular system to build one.</h2>
@@ -42,14 +45,14 @@ layout: default
 			<p>
 				The approach was to build a list of different and combinable modules with optional ui elements actionable from the CMS that would allow the publishers to build websites block by block.
 			</p>
-			<div class="case-image faded">
+			<div class="case-image">
 				<img src='{{ "images/cases/01/seat-ws-02.png" | relative_url }}' alt="specifications of a module">
 			</div>
 			<h2>Different layouts for different purposes.</h2>
 			<p>
 				Apart from the modular system, our team designed some other templates for those pages that need to be more static and consistent over the time and to cover more complex tasks such as contact forms, test drives appointments, dealer search functionality or an article template for the corporate news. 
 			</p>
-			<div class="case-image faded">
+			<div class="case-image">
 				<img src='{{ "images/cases/01/seat-ws-03.png" | relative_url }}' alt="different templates">
 			</div>
 			<h2>Learnings from working for a slow-paced international company.</h2>
@@ -59,8 +62,6 @@ layout: default
 			<p>
 				This project is developed by Accenture and it’s still on going. You can check the current status of the site at <a href="http://seat.com">www.seat.com</a>.
 			</p>
-				
-				
 			</div>
 		</article>
 	</section>
