--- a/_scss/critical.scss
+++ b/_scss/critical.scss
@@ -39,7 +39,8 @@ section{
 }
 ::selection {
   color: black;
-  background: lighten($green, 20);
+  background: $green;
+  opacity: .8;
 }
 ul, ol, figure {
   @include no-space;
@@ -48,11 +49,8 @@ ul, ol, figure {
     @include no-space
   }
 }
-
-// CRITICAL STUFF
-@import '../_scss/layouts/header-home';
-@import '../_scss/layouts/home-story';
-
+@import '../_scss/helpers/animations';
+@import '../_scss/modules/_navigation';
 
 
 
