--- a/_scss/helpers/_mixins.scss
+++ b/_scss/helpers/_mixins.scss
@@ -17,23 +17,18 @@ $xxl: min-width $bp-xxlarge;
 // Colors
 $grey-1: #FAFBFC;
 $grey-2: #F0F2F5;
-$grey-3: #C0C5CC;
+$grey-3: #D8DDE6;
 $grey-4: #909399;
 $grey-5: #606266;
-$grey-6: #484A4D;
-$grey-7: #2C3739;
+$grey-6: #4F6266;
+$grey-7: #3D4647;
 $dividers: $grey-2;
 $placeholders: $grey-1;
 
-$red: #F8223E;
-$orange: #FCAF56;
-$yellow: #FFE04A;
+
 $green: #39EF9F;
-$blue: #576FF3;
-$dark-blue: #073288;
-$sky-blue: #8EDCF8;
-$purple: #A98FC1;
-$pink: #FF3F6E;
+$red: #F8223E;
+
 
 $main: $green;
 $text: $grey-6;
@@ -42,8 +37,6 @@ $title: $grey-7;
 // Variables
 $base-typography: 20px;
 $max-width: 1440px;
-// $max-width: 1280px;
-
 $radius: 2px;
 
 
@@ -61,8 +54,8 @@ $radius: 2px;
    -moz-osx-font-smoothing: grayscale;
 }
 
-@mixin catamaran($weight, $size) {
-  font-family: 'Catamaran', Helvetica, sans-serif; 
+@mixin work($weight, $size) {
+  font-family: 'Work Sans', Helvetica, sans-serif; 
   font-weight: $weight; 
   font-size: $size; 
   @include smoothy;
@@ -72,15 +65,18 @@ $radius: 2px;
 @mixin out-container{
   width: 100%;
   max-width: $max-width;
-  padding: 0;
+  padding: 0 1rem;
   position: relative;
   margin: 0 auto;
   @include border-box;
   @include clearfix; 
+  
+  @include media($m) {
+    padding: 0 2rem;
+  }
 
   @include media($l) {
     padding: 0 2.5rem;
-
   }
 }
 
@@ -97,60 +93,9 @@ $radius: 2px;
   @include out-container;
 }
 
-//Animations
-.animated{animation-duration:0s;
-  @include media($m) {animation-duration:1s;animation-fill-mode:both}
-}
-
-.faded, .faded-right{
-  opacity: 1;
-  animation-duration:0s;
-  @include media($m) {
-    opacity: 0;
-    animation-duration:.75s;
-    animation-fill-mode: both;
-  }
-}
-.animated.infinite {  animation-iteration-count: infinite; }
-
-@keyframes fadeInUp {
-  from { opacity: 0;  transform: translate3d(0, 30%, 0); }
-  to { opacity: 1; transform: none; }
-}
-.fadeInUp { -webkit-animation-name: fadeInUp; animation-name: fadeInUp; }
-
-@keyframes fadeInDown {
-  from { opacity: 0; transform: translate3d(0, -100%, 0); }
-  to { opacity: 1; transform: none; }
-}
-.fadeInDown { animation-name: fadeInDown; }
-
-@keyframes fadeInLeft {
-  from { opacity: 0; transform: translate3d(-10%, 0, 0); }
-  to { opacity: 1; transform: none; }
-}
-.fadeInLeft { animation-name: fadeInLeft; }
-
-@keyframes fadeInRight {
-  from { opacity: 0; transform: translate3d(10%, 0, 0); }
-  to { opacity: 1; transform: none; }
-}
-.fadeInRight { animation-name: fadeInRight; }
-
-@keyframes rotateIt {
-  from {  opacity: 0; transform: rotate(-45deg); }
-  to {  opacity: 1; transform: rotate(-15deg); }
-}
-.rotateIt { animation-name: rotateIt; }
 
 
 
 
-.delay-2 { animation-delay: .2s }
-.delay-3 { animation-delay: .3s }
-.delay-4 { animation-delay: .4s }
-.delay-5 { animation-delay: .5s }
-.delay-6 { animation-delay: .6s }
-.delay-7 { animation-delay: .7s }
 
 
