--- a/_scss/helpers/_typography.scss
+++ b/_scss/helpers/_typography.scss
@@ -4,81 +4,76 @@ h1, h2, h3, h4, h5, p, ul, li, a {
   @include no-space;
 }
 h1 {
-  @include catamaran(900, 2.3rem);
-  color: $grey-7;
+  @include work(300, 2.1rem);
+  color: $title;
   line-height: 1;
+
   @include media($m) {
-    @include catamaran(900, 3.6rem);
-    line-height: .7;
-  }
-  @include media($l) {
-    @include catamaran(900, 4.5rem);
-    line-height: .8;
+    @include work(300, 3.2rem);
+    line-height: 1.1;
+    letter-spacing: 3px;
   }
 }
 h2 {
-  @include catamaran(900, 1.6rem);
+  @include work(300, 2.1rem);
   color: $title;
   line-height: 1.125;
   
   @include media($m) {
-    @include catamaran(900, 2.4rem);
-    line-height: 1.125;
+    @include work(300, 3.2rem);
+    line-height: 1.1;
+    letter-spacing: 3px;
   }
 
 }
 h3 {
-  @include catamaran(900, 1.4rem);
+  @include work(900, 1.4rem);
   color: $title;
   line-height: 1.125;
 
   @include media($m) {
-    @include catamaran(900, 2.4rem);
+    @include work(900, 2.4rem);
     line-height: 1.125;
   }
 }
 h4 {
-  @include catamaran(700, 1rem);
+  @include work(700, 1rem);
   color: $title;
   line-height: 1.5;
   margin-bottom: 1rem;
 }
 p, li , figcaption{
-  @include catamaran(400, .9rem);
+  @include work(400, 1.1rem);
   color: $text;
-  line-height: 1.5;
+  line-height: 40px;
   margin-bottom: 1rem;
   position: relative;
   z-index: 1;
-
-  @include media($l) {
-    @include catamaran(400, 1.1rem);
-    line-height: 1.625;
-  }
 }
 a {
   text-decoration: none;
   color: inherit;
   position: relative;
   transition: all .3s;
-  font-weight: 700;
-  color: $title;
+  font-weight: 500;
   transition: all .3s;
+
   &:after{
     content: '';
     width: 100%;
-    height: 6px;
+    height: .3em;
     position: absolute;
-    bottom: 7px;
+    bottom: 3px;
     left: 0;
     background:$main;
+    box-shadow: 0rem 0 0 $main;
     z-index: -1;
     transition: all .3s;
   }
   &:hover:after{
-      width: 108%;
-      height: 11px;
-      left: -4%;
+      height: 1.2em;
+      left: 0%;
+      box-shadow: .5em 0 0 $main;
       transition: all .3s;
   }
 }
