--- a/_scss/layouts/home.scss
+++ b/_scss/layouts/home.scss
@@ -1,414 +1,191 @@
-/////////////////////////////////////////
-//Showcase
-/////////////////////////////////////////
-
-.showcase_title {
+.wrap {
+  @include out-container;
+  @include clearfix;
+}
+.heading {
   @include column(12, 12);
-  margin-left: 0;
-  margin-top: 2rem;
-  z-index: 1;
-
-  @include media($m) {
-    margin-left: 2/12*100%;
-    @include column(8, 12);
-    margin-top: 6rem;
-  }
-  @include media($l) {
-    @include column(6, 12);
-  }
-  > h2 {
-    margin-bottom: 1.2rem;
-    text-transform: uppercase;
-  }
-  > p {
-    width: 80%;
-    margin-bottom: 0;
-  }
-}
-.green-ptrn {
-  width: 80px;
-  height: 80px;
-  display: block;
-  position: absolute;
-  background: transparent url('../images/ui/green-ptr.svg') left top no-repeat;
-  background-size: 100%;
-  top: -.5rem;
-  left: -2.25rem;
-  z-index: -1;
-
-  @include media($m) {
-    width: 120px;
-    height: 120px;
-    top: -.75rem;
-    left: -2.25rem;
-  }
-  @include media($l) {
-    width: 145px;
-    height: 145px;
-    top: -1.25rem;
-    left: -5rem;
-  }
-}
-@import '../modules/case-list';
-
-/////////////////////////////////////////
-//Grid
-/////////////////////////////////////////
-
-.example-grid {
-  margin: 2rem auto;
+  margin-top: 4.5rem;
   @include clearfix;
 
   @include media($m) {
-    margin: 7.5rem auto 4rem auto;
+    @include column(11, 12);
+    margin-left: 1/12*100%;
   }
-  .grid-row {
-    margin-bottom: 0;
-    @include clearfix;
+  > .title {
+    margin-left: -4px;
+    max-width: 400px;
+  }
+}
+.heading-columns {
+  margin-top: 4rem;
+
+  > .left-column {
+    @include column(12, 12);
 
     @include media($m) {
-      margin-bottom: 3rem;
+      @include column(10, 12);
+      margin-left: 1/12*100%;
+    }
+    @include media($l) {
+      @include column(5, 12);
+      margin-left: 1/12*100%;
     }
   }
-  .grid-item {
-    position: relative;
-    margin-bottom: 0rem;
+  > .right-column {
+    @include column(12, 12);
 
-    .item-image {
-      margin-top: 2rem;
-
-      @include media($m) {
-        margin-top: 0;
-      }
+    @include media($m) {
+      @include column(10, 12);
+      margin-left: 1/12*100%;
     }
-    .item-copy {
-      position: relative;
-      display: block;
-      width: 80%;
-      height: auto;
-      text-align: left;
-      margin-top: 2rem;
-      padding-left: 1rem;
-
-      @include media($m) {
-        position: absolute;
-        display: block;
-        width: 10.5rem;
-        margin-top: 0;
-      }
-      @include media($m) {
-        position: absolute;
-        display: block;
-        width: 10.5rem;
-      }
-      @include media($l) {
-        @include catamaran(400, .9rem);
-        color: $text;
-        line-height: 1.5;
-      }
-
-      &:after {
-        content: '';
-        width: 1rem;
-        height: 2px;
-        display: block;
-        position: absolute;
-        background: $main;
-        bottom: -.5rem;
-      }
-    }
-    img {
-      width: 100%;
-    }
-  }
-  .item-01 {
-    .item-copy {
-      @include media($m) {
-        bottom: 1rem;
-        right: -11.5rem;
-      }
-    }
-    .item-image {
-      @include column(12, 12);
-      margin-left: 0%;
-
-      @include media($m) {
-        @include column(7, 12);
-        margin-left: 1/12*100%;
-      }
-    }
-  }
-  .item-02 {
-    .item-copy {
-      @include media($m) {
-        bottom: -4.5rem;
-        left: 0rem;
-      }
-    }
-    .item-image {
-      @include column(12, 12);
-      margin-left: 0;
-      padding-top: 0;
-
-      @include media($m) {
-        @include column(5, 12);
-        margin-left: .5/12*100%;
-        padding-top: 15rem;
-      }
-      @include media($l) {
-        @include column(4.5, 12);
-        margin-left: .5/12*100%;
-      }
-    }
-  }
-  .item-03 {
-    .item-copy {
-      @include media($m) {
-        top: 8rem;
-        left: -12.5rem;
-        text-align: right;
-
-        &:after {
-          right: 0;
-        }
-      }
-    }
-    .item-image {
-      @include column(12, 12);
-      margin-left: 0%;
-
-      @include media($m) {
-        @include column(5.5, 12);
-        margin-left: .5/12*100%;
-        @include omega;
-      }
-      @include media($l) {
-        @include column(6, 12);
-        margin-left: .5/12*100%;
-      }
-    }
-  }
-  .item-04 {
-    .item-copy {
-      @include media($m) {
-        width: 11.5rem;
-        bottom: -4.5rem;
-        right: 1rem;
-        text-align: right;
-
-        &:after {
-          right: 0;
-        }
-      }
-    }
-    .item-image {
-      @include column(12, 12);
-      margin-left: 0%;
-
-      @include media($m) {
-        @include column(7, 12);
-        margin-left: 4/12*100%;
-      }
-      @include media($l) {
-        @include column(7, 12);
-        margin-left: 3/12*100%;
-      }
-    }
-  }
-  .item-05 {
-    .item-copy {
-      @include media($m) {
-        bottom: -4.5rem;
-        left: 0rem;
-      }
-    }
-    .item-image {
-      @include column(12, 12);
-      margin-left: 0;
-      padding-top: 0;
-
-      @include media($m) {
-        @include column(6, 12);
-        margin-left: .5/12*100%;
-      }
-      @include media($l) {
-        @include column(5.5, 12);
-        margin-left: .5/12*100%;
-      }
-    }
-  }
-  .item-06 {
-    .item-copy {
-      @include media($m) {
-        bottom: -4.5rem;
-        left: 0rem;
-      }
-    }
-    .item-image {
-      @include column(12, 12);
-      margin-left: 0;
-      padding-top: 0;
-
-      @include media($m) {
-        @include column(4, 12);
-        margin-left: .5/12*100%;
-        padding-top: 15rem;
-      }
-      @include media($l) {
-        @include column(4.5, 12);
-        margin-left: .5/12*100%;
-      }
+    @include media($l) {
+      @include column(5, 12);
+      margin-left: .45/12*100%;
     }
   }
 }
-/////////////////////////////////////////
-//Contact
-/////////////////////////////////////////
-
-.contact {
-  height: 300px;
-  overflow: hidden;
-  padding-top: 50px;
+.home-image {
+  @include column(12, 12);
+  margin-top: 3rem;
 
   @include media($m) {
-    padding-top: 200px;
-    height: 400px;
+    @include column(11, 12);
+    margin-left: 1/12*100%;
+    margin-top: 5rem;
   }
   @include media($l) {
-    height: 500px;
+    @include column(9, 12);
+    margin-left: 3/12*100%;
+    margin-top: 7rem;
+  }
+  figure {
+    margin: 0;
+    padding: 0;
+    @include border-box;
+  }
+  img {
+    width: 100%;
   }
 }
-.email {
-  text-align: left;
-  display: block;
-  padding: 3rem 0 3rem 0rem;
-  @include clearfix;
+.cases {
+  margin: 5rem 0;
 
   @include media($m) {
-    text-align: center;
-    padding: 4rem 0 4rem 0;
-    display: block;
+    margin: 7rem 0;
+    padding: 2rem 0;
   }
-}
-.contact-cta {
-  position: relative;
-  width: 100%;
-  margin: 0;
-
-  @include media($m) {
-    width: 320px;
-    margin: 0 auto;
-  }
-}
-.contact-grey-box {
-  width: 1200px;
-  height: 900px;
-  background: red;
-  display: block;
-  position: absolute;
-  background: $placeholders;
-  border-radius: 50px;
-  transform: rotate(-20deg);
-  left: -800px;
-  top: 70px;
-
-  @include media($m) {
-    width: 1200px;
-    height: 900px;
-    transform: rotate(15deg);
-    left: -800px;
-    top: -210px;
-  }
-}
-
-.contact-cta a {
-  position: relative;
-
-  span {
-    position: relative;
-    @include catamaran(800, 1.5rem);
-    z-index: 1;
+  .subtitle {
+    @include work(300, 2.3rem);
+    line-height: 1.1;
+    letter-spacing: 3px;
+    @include column(12, 12);
 
     @include media($m) {
-      @include catamaran(800, 2rem);
+      @include work(300, 3.2rem);
+      @include column(11, 12);
+      margin-left: 1/12*100%;
     }
-    > span {
-      display: none;
+    @include media($l) {
+      @include column(4, 12);
+      margin-left: 1/12*100%;
     }
+  }
+}
+.case-list {
+  @include column(12, 12);
+  margin-top: 4rem;
+  @include work(300, 2.1rem);
+
+  @include media($m) {
+    @include work(300, 3.2rem);
+    @include column(11, 12);
+    margin-left: 1/12*100%;
+    margin-top: 5rem;
+  }
+  @include media($l) {
+    @include column(6.70, 12);
+    margin-left: 0/12*100%;
+    margin-right: 0;
+    margin-top: 0;
+
     &:after {
       content: '';
-      width: 100%;
-      height: 10px;
-      position: absolute;
-      bottom: 12px;
-      left: 0;
+      width: 1px;
+      height: 180px;
       background: $main;
-      z-index: -1;
-      transition: all .3s;
-
-      @include media($m) {
-        height: 10px;
-        position: absolute;
-        bottom: 16px;
-      }
+      display: block;
+      position: absolute;
+      left: 0;
+      top: -250px;
     }
   }
-  &:hover span:after {
-    width: 104%;
-    height: 28px;
-    left: -2%;
-    transition: all .3s;
+}
+.case-link {
+  margin-bottom: 1rem;
+
+  @include media($m) {
+    @include work(400, 1.8rem);
+    line-height: 2.5rem;
+    letter-spacing: 1.7px;
+    margin-bottom: 2.5rem;
   }
-  &:hover:after {
+  a {
+    @include media($m) {
+      @include work(400, 1.8rem);
+      line-height: 2.5rem;
+      letter-spacing: 1.7px;
+    }
+  }
+}
+// FOOTER
+
+.contact {
+  @include work(400, 1.1rem);
+  line-height: 1.1;
+  letter-spacing: 3px;
+  @include column(12, 12);
+  color: $text;
+  margin-top: 4rem;
+
+  @include media($m) {
+    @include work(400, 2rem);
+    @include column(11, 12);
+    margin-left: 1/12*100%;
+    margin-top: 8rem;
+  }
+}
+.contact-address {
+  
+  @include media($m) {
+    max-width: 475px;
+  }
+  span {
     display: none;
   }
 }
 .social-media {
-  height: 130px;
-  width: 100%;
-  display: block;
-  position: relative;
+  margin-top: 1rem;
+  margin-bottom: 4rem;
+}
 
-  ul {
-    text-align: center;
-  }
-  li {
-    display: block;
-    text-align: left;
-    float: left;
-    margin-bottom: 1rem;
-    @include border-box;
-    padding-left: .5rem;
-
-    @include media($m) {
-      width: auto;
-      float: none;
-      text-align: center;
-      margin-bottom: 0;
-      display: inline;
-      padding: 0 2rem;
-    }
-    @include media($l) {
-      padding: 0 3rem;
-    }
-    &:nth-child(2n+1) {
-      width: 40%;
-    }
-    &:nth-child(2n) {
-      width: 60%;
-    }
-  }
-  a {
+.sm-item {
+display: inline-block;
+@include work(400, 1rem);
+  @include media($m) {
     display: inline-block;
-    text-transform: uppercase;
-    font-weight: 800;
-    font-size: .8rem;
+    margin-right: 2rem;
+    &:last-child{
+    	margin-right: 0;
+    }
+  }
 
-    @include media($m) {
-      font-size: 1rem;
-    }
-    &:after {
-      background: $grey-3;
-    }
+  a:after{
+		background:$grey-3;
+    box-shadow: 0em 0 0 $grey-3;
+  }
+  a:hover:after{
+    box-shadow: .5em 0 0 $grey-3;
   }
 }
+
+
