--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -3,7 +3,7 @@
 @import 'helpers/typography';
 // ––––––––––––––Layouts
 @import 'layouts/home';
-@import 'layouts/seat-web';
+@import 'layouts/post';
 // ––––––––––––––Print Styles
 @import 'reset/print';
 
