Fixed an image, some text and deleted a layout-template.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,15 +14,15 @@ layout: default
 		<div class="heading-columns">
 			<div class="left-column animated fadeInUp delay-3">
 				<p>
-					I'm David, a Designer based in Barcelona who loves sports and has been <a href="https://wefoundarobot.com">traveling</a> the world during 2017. The journey started in St. Petersburg and finished in San Francisco.
+					I'm David, a designer based in Barcelona who likes to create interfaces that work beautifuly. I also love sports and I've been <a href="https://wefoundarobot.com">traveling</a> the world during 2017.
 				</p>
 				<p>
-					Before that decision, I was working at <a href="http://lola-mullenlowe.com">LOLA</a> [Mullenlowe Group] leading a small team of designers. Even with a group that small, we got a really big project in our hands: Rethink & Improve the Global Digital Ecosystem of the largest Spanish automotive brand, SEAT.
+					Before that decision, I was working happily at <a href="http://lola-mullenlowe.com">LOLA</a> [MullenLowe Group] leading a small team of designers with a really big project in hands: Rethink & Improve the Global Digital Ecosystem of the largest Spanish automotive brand, SEAT.
 				</p>
 			</div>
 			<div class="right-column animated fadeInUp delay-5">
 				<p>
-					Even before, I worked for a really cool company called <a href="https://www.linkedin.com/company/675629/">Mobivery</a>. There, I crafted tons of mobile applications for many clients & platforms. Also, I had the opportunity to work on <a href="https://www.linkedin.com/company/2319614/">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.
+					Even before, I was in a really cool company called <a href="https://www.linkedin.com/company/675629/">Mobivery</a>. There, I crafted tons of mobile applications for many clients & platforms. Also, I had the opportunity to work on <a href="https://www.linkedin.com/company/2319614/">Malcom</a>, a SaaS for Mobile Marketing that combined push, analytics and a layer of BI.
 				</p>
 				<p>
 					In the side, I taught design in schools like <a href="https://ironhack.com">Ironhack</a> or TheAppSchool; and directly to design teams inside companies like Schneider Electrics or TV3.
