Small fixes on mobile typography and navigation issues. Added more stuff to Critical.css

--- a/_scss/critical.scss
+++ b/_scss/critical.scss
@@ -51,6 +51,7 @@ ul, ol, figure {
 }
 @import '../_scss/helpers/animations';
 @import '../_scss/modules/_navigation';
+@import '../_scss/modules/_hp-header';
 
 
 
